--- a/index.html
+++ b/index.html
@@ -594,6 +594,13 @@
                 <span>Twitter</span>
             </a>
         </div>
+        
+      <div class="credits-section fade-in" id="credits">
+    <h2 class="credits-title">Créditos</h2>
+    <p class="credit-item">FlyOutWest - Yot Club</p>
+    <p class="credit-item">Release the Ghouls! - greggreg</p>
+    <p class="credit-item">iloveyou - xyy / bubu</p>
+</div>
 
         <div class="footer fade-in">
             <p>Creado con 💕 por mi. Inspirado en Sammwy.com | 2025</p>
