--- a/index.html
+++ b/index.html
@@ -596,10 +596,12 @@
         </div>
         
       <div class="credits-section fade-in" id="credits">
-    <h2 class="credits-title">Créditos</h2>
+    <h2 class="credits-title">Credits</h2>
     <p class="credit-item">FlyOutWest - Yot Club</p>
     <p class="credit-item">Release the Ghouls! - greggreg</p>
     <p class="credit-item">iloveyou - xyy / bubu</p>
+
+    <p class="credit-item">special thank to xSadoxs for recommend me FlyOutWest !</p>
 </div>
 
         <div class="footer fade-in">
