--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
     <p class="credit-item">Release the Ghouls! - greggreg</p>
     <p class="credit-item">iloveyou - xyy / bubu</p>
 
-    <p class="credit-item">special thank to xSadoxs for recommend me FlyOutWest !</p>
+    <p class="credit-item">Special thank to xSadoxs for recommend me FlyOutWest !</p>
 </div>
 
         <div class="footer fade-in">
