--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             background-position: center;
             background-attachment: fixed;
             overflow-x: hidden;
-            padding-bottom: 80px; /* Espacio para el reproductor */
+            padding-bottom: 80px; /* espacio para el reproductor */
         }
 
         .container {
@@ -711,6 +711,10 @@
                 },
                 {    
 
+                    title: "FlyOutWest",
+                    path: "musica/FlyOutWest.mp3"
+                },
+                {  
                     title: "FlyOutWest",
                     path: "musica/FlyOutWest.mp3"
                 }
