--- a/index.html
+++ b/index.html
@@ -715,8 +715,8 @@
                     path: "musica/FlyOutWest.mp3"
                 },
                 {  
-                    title: "FlyOutWest",
-                    path: "musica/FlyOutWest.mp3"
+                    title: "Resting Place",
+                    path: "musica/RestingPlace.mp3"
                 }
             ];
             
