--- a/index.html
+++ b/index.html
@@ -600,6 +600,7 @@
     <p class="credit-item">FlyOutWest - Yot Club</p>
     <p class="credit-item">Release the Ghouls! - greggreg</p>
     <p class="credit-item">iloveyou - xyy / bubu</p>
+    <p class="credit-item">FORSAKEN OST - Resting Place - Vladosikos17</p>
 
     <p class="credit-item">Special thank to xSadoxs for recommend me FlyOutWest !</p>
 </div>
